debian-installer (20040425) UNRELEASED; urgency=low

  * Bastian Blank
    - Remove libnss_dns workaround and install libnss-dns-udeb.
    - busybox is not longer kernel dependend.

 -- Bastian Blank <waldi@debian.org>  Sat, 24 Apr 2004 19:42:50 +0200

debian-installer (20040424) unstable; urgency=low

  * Bdale Garbee
    - trim hppa kernel command line options to stay under palo size limit
  * Joey Hess
    - daily-build will produce a machine readable overview.log
    - discover2-udeb is renamed to discover-udeb
    - Stop using evil tabs in f7.txt. Closes: #245634
  * Bastian Blank
    - Define a correct EXTRANAME for s390/tape.
    - Kernels depends on unpacked tree.
  * Martin Michlmayr
    - Include the Cobolt boot loader on the netboot image.

 -- Joey Hess <joeyh@debian.org>  Sat, 24 Apr 2004 11:54:27 -0400

debian-installer (20040422) unstable; urgency=low

  * Bdale Garbee
    - add a new MISC target to the build Makefile, which makes it easy to 
      deliver a set of additional files to the target directory.  use it to 
      deliver the bootloader and config file (elilo.efi and elilo.conf) for 
      ia64 netboot.
    - add ia64 netboot instructions to the manual
  * Martin Michlmayr
    - Use the 2.4.25 images for the DECstation CD-ROM images.
  * Colin Watson
    - Remove yaboot timeout. Ten seconds was too short, at least.
  * Joey Hess
    - Comment out the rest of the sparc floppies.

 -- Joey Hess <joeyh@debian.org>  Thu, 22 Apr 2004 12:22:05 -0400

debian-installer (20040421.2) unstable; urgency=low

  * Colin Watson
    - Set HOME=$(TEMP) while running hformat so that it doesn't require
      write access to the real $HOME/.hcwd, and clean up .hcwd afterwards.
    - Comment out miboot invocation for now; it's still not in the archive.

 -- Joey Hess <joeyh@debian.org>  Wed, 21 Apr 2004 13:41:15 -0400

debian-installer (20040421) unstable; urgency=low

  * Joey Hess
    - Add a f3.txt.with26 to the cd_info tarball. It's the same as f3.txt,