@@ -8,3 +8,7 @@ KERNEL_FLAVOUR = di
 KERNELNAME = vmlinuz
 KERNELIMAGEVERSION = $(KERNELVERSION)
 
+$(DEST)/parmfile.debian:
+	install -m644 boot/s390/parmfile $@
+	./update-manifest $@ "parmfile"
+
