@@ -8,13 +8,9 @@ EXTRANAME = $(MEDIUM)/
 MANIFEST-INITRD = "initrd"
 MANIFEST-KERNEL = "kernel for vmreader ipl"
 
-dest/generic/debian.exec: boot/s390/exec
+$(DEST)/debian.exec: boot/s390/exec
 	install -m644 $^ $@
 	./update-manifest $@ "ipl script"
 
-dest/generic/parmfile.debian: boot/s390/parmfile
-	install -m644 $^ $@
-	./update-manifest $@ "parmfile"
-
-tmp/generic/kernel.debian: tmp/generic/vmlinuz
+$(TEMP)/kernel.debian: $(TEMP)/vmlinuz
 	ln $+ $@
