@@ -3,8 +3,10 @@ debian-installer (20040425) UNRELEASED; urgency=low
   * Bastian Blank
     - Remove libnss_dns workaround and install libnss-dns-udeb.
     - busybox is not longer kernel dependend.
+    - Only call depmod if there are modules in the tree.
+    - Make TEMP and DEST resolvable in the config.
 
- -- Bastian Blank <waldi@debian.org>  Sat, 24 Apr 2004 19:42:50 +0200
+ -- Bastian Blank <waldi@debian.org>  Sun, 25 Apr 2004 11:21:52 +0200
 
 debian-installer (20040424) unstable; urgency=low
 
